--- a/src/sakai/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/panels/importExport/ExportPanel.html
+++ b/src/sakai/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/panels/importExport/ExportPanel.html
@@ -54,6 +54,12 @@
                                         <wicket:message key="importExport.export.advancedOption.includeStudentId"/>
                                     </label>
                                 </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" wicket:id="includeDNI">
+                                        <wicket:message key="importExport.export.advancedOption.includeDNI"/>
+                                    </label>
+                                </div>
                                 <wicket:enclosure child="includePoints">
                                     <div class="checkbox">
                                         <label>
