MSU-3 Aplicar pedaços de performance per al gradebook ng
- Arreglat bug al fer click a un alumne per a veure el resum de les
qualificacions.
- Arreglats bugs visuals derivats dels improvements.

--- a/src/sakai/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/panels/StudentGradeSummaryGradesPanel.html
+++ b/src/sakai/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/panels/StudentGradeSummaryGradesPanel.html
@@ -17,6 +17,8 @@
 				</div>
 			</div>
 
+			<div class="clearfix"></div>
+
 			<div wicket:id="gradeSummaryTable"/>
 
 			<div wicket:id="noAssignments" class="messageInformation">
