MSU-13 Canviats els enllaços a l'eina de informes

--- a/conf/tomcat/webapps/ROOT/pentaho.html
+++ b/conf/tomcat/webapps/ROOT/pentaho.html
@@ -3,8 +3,8 @@
 <head>
 <title>Dppa</title>
 </head>
-<body onLoad="popW('http://cv2.udl.cat:8888/pentaho')" >
-Si no s'obre una finestra autom&agrave;ticament amb l'eina dppa feu click <a href="http://cv2.udl.cat:8888/pentaho">Aqu&iacute;</a>
+<body onLoad="popW('https://informes.udl.cat/pentaho/Home')" >
+Si no s'obre una finestra autom&agrave;ticament amb l'eina dppa feu click <a href="https://informes.udl.cat/pentaho/Home">Aqu&iacute;</a>
 <script language="javascript"><!--
 function popW(url){
   r=Math.random();t=Math.round(r*250);
